--- a/desing plans/Desing_Plans.html
+++ b/desing plans/Desing_Plans.html
@@ -58,37 +58,130 @@
         <article>
             <div class="article-desingplans">
                 <div class="price-gold">
-                    <!-- <div class="tittle-price">
-                        <h1>Plan Bronze</h1>
+                    <div class="tittle-price">
+                        <h1>Gold Plan</h1>
                     </div>
-                    <divc class="benefit">
-
+                    <div class="benefit">
+                        <ul>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum dolor.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum dolor.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum dolor.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum dolor.</p>
+                            </li>
+                        </ul>
                     </div>
                     <div class="price">
-
-                    </div> -->
+                        <p>80$ price per job</p>
+                    </div>
                 </div>
                 <div class="price-silver">
-                    <!-- <div class="tittle-price">
-                        <h1>Plan Bronze</h1>
+                    <div class="tittle-price">
+                        <h1>Silver Plan</h1>
                     </div>
-                    <divc class="benefit">
-
+                    <div class="benefit">
+                        <ul>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum dolor.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum dolor.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum dolor.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum dolor.</p>
+                            </li>
+                        </ul>
                     </div>
                     <div class="price">
-
-                    </div> -->
+                        <p>60$ price per job</p>
+                    </div>
                 </div>
                 <div class="price-bronze">
-                    <!-- <div class="tittle-price">
-                        <h1>Plan Bronze</h1>
+                    <div class="tittle-price">
+                        <h1>Bronze Plan</h1>
                     </div>
-                    <divc class="benefit">
-
+                    <div class="benefit">
+                         <ul>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum dolor.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum dolor.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum dolor.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum.</p>
+                            </li>
+                            <li>
+                                <p><i class="fas fa-solid fa-check"></i>Lorem, ipsum dolor.</p>
+                            </li>
+                        </ul>
                     </div>
                     <div class="price">
-
-                    </div> -->
+                        <p>40$ price per job</p>
+                    </div>
                 </div>
             </div>
         </article>
