--- a/information/Information.html
+++ b/information/Information.html
@@ -68,7 +68,7 @@
                     <div class="information1">
                         <div class="information-1">
                             <div class="information-tittle">
-                                <h1 class="hg">Plan Gold</h1>
+                                <h1 class="hg">Gold Plan</h1>
                             </div>
                             <div class="information-plan img-plan1">
                                 <img src="/img/pexels-olena-bohovyk-18254094.jpg" alt="">
@@ -85,7 +85,7 @@
                     <div class="information2">
                         <div class="information-2">
                             <div class="information-tittle">
-                                <h1 class="hs">Plan Silver</h1>
+                                <h1 class="hs">Silver Plan</h1>
                             </div>
                             <div class="information-plan img-plan2">
                                 <img src="/img/pexels-mayur-gawade-12967160.jpg" alt="">
@@ -122,7 +122,7 @@
 
                         <div class="information-3">
                             <div class="information-tittle">
-                                <h1 class="hb">Plan Bronze</h1>
+                                <h1 class="hb">Bronze Plan</h1>
                             </div>
                             <div class="information-plan img-plan3">
                                 <img src="/img/pexels-matheus-viana-9420357.jpg" alt="">
